# pw_advanced_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  main.cpp  outline.md  raport.md  rebuild_and_run.sh  stop_server_client.sh
diagrams/: pacman_diagrams.puml
docs/: DOCS.md  MISSING_FEATURES.md  POLECENIE.md  README.md  TODO.md  class_diagram.puml  diagram_klas.puml  report.md
docs/raports/new_version/: projekt_etap_1_Piotr_Suchy_feedback.txt
docs/raports/old_version/: raport_feedback.txt  raport_part2_feedback.txt
docs/reports/report_3-final/: REPORT.md
include/client/: AudioManager.hpp  GameClient.hpp
include/core/: ClassicMaze.hpp  DebugUtils.hpp  Entity.hpp  GameController.hpp  ICollectible.hpp  InputManager.hpp  LevelManager.hpp  PacMan.hpp
include/graphics/: Constants.hpp  GhostRenderer.hpp  LevelRenderer.hpp  PacmanRenderer.hpp
include/server/: GameServer.hpp
include/shared/: AudioCue.hpp  EventQueue.hpp  GameTypes.hpp  GhostLogic.hpp  IEntity.hpp  IGhostAI.hpp  InteractionResolver.hpp  Match.hpp  PacmanLogic.hpp  Player.hpp  Simulation.hpp
playground/: main.cpp  main_ctowar.cpp  main_loop.cpp  main_okrąg_klasa.cpp  misia_oczko.cpp
reports/: report_part2.md  uml_diagram.puml
scripts/: install_deps_ubuntu.sh
src/: main.cpp
src/client/: AudioManager.cpp  GameClient.cpp  main.cpp  main_client.cpp
src/core/: Entity.cpp  Entity.h  Game.cpp  Game.h  GameController.cpp  ICollectible.cpp  InputManager.cpp  LevelManager.cpp  PacMan.cpp  Pellet.cpp  Pellet.h  Player.cpp  Player.h  Wall.cpp  Wall.h
src/graphics/: GhostRenderer.cpp  LevelRenderer.cpp  PacMan.cpp  PacmanRenderer.cpp
src/network/: NetworkManager.cpp  NetworkManager.h
src/server/: GameServer.cpp  main.cpp  main_server.cpp
src/shared/: GhostLogic.cpp  InteractionResolver.cpp  Match.cpp  PacmanLogic.cpp  Simulation.cpp
src/utils/: Grid.h
